--- a/chatbot.html
+++ b/chatbot.html
@@ -1,1 +1,1 @@
-<iframe src="https://webchat,botframework.com/embed/carebot-tsyfwto?s=0Oob6XXLfuo.MhSqXWDOfriDZxOo4q3PylS-OZOEdSPVQ__TLVK0tBo" style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+<iframe src='https://webchat.botframework.com/embed/carebot-tsyfwto?s=0Oob6XXLfuo.MhSqXWDOfriDZxOo4q3PylS-OZOEdSPVQ__TLVK0tBo'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
