--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 									</ul>
 								</li>
 								<li><a href="contact.html">Contact Us</a></li>
+								<li><a href="chatbot.html">Carebot </a></li>
 							</ul>
 						</nav>
 					</div>
